[gd_scene load_steps=37 format=2]

[ext_resource path="res://Assets/Sprites/tile.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/CoinSpawner.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sprites/coin2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/coin1.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=6]
[ext_resource path="res://UI/HUD.gd" type="Script" id=7]
[ext_resource path="res://Assets/Sprites/Tiles/tile_0021.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Tiles/tile_0022.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Tiles/tile_0023.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Tiles/bg_tilemap.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/Tiles/tile_0124.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/Tiles/tile_0125.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/Tiles/tile_0126.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/heart.png" type="Texture" id=15]
[ext_resource path="res://Assets/PixelNumbersFont.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://Assets/Sprites/game_over.png" type="Texture" id=17]
[ext_resource path="res://UI/GameOver.gd" type="Script" id=18]
[ext_resource path="res://Assets/Audio/coin.wav" type="AudioStream" id=19]
[ext_resource path="res://Assets/Sprites/press_space1.png" type="Texture" id=20]
[ext_resource path="res://Scenes/Main Menu.gd" type="Script" id=21]
[ext_resource path="res://Assets/Sprites/press_space2.png" type="Texture" id=22]
[ext_resource path="res://Assets/Sprites/press_space3.png" type="Texture" id=23]
[ext_resource path="res://AI.py" type="Script" id=24]
[ext_resource path="res://Scenes/ai_environment.gd" type="Script" id=25]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=5]
0/name = "tile.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = -3
1/name = "tile_0021.png 1"
1/texture = ExtResource( 8 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "tile_0022.png 2"
2/texture = ExtResource( 9 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 3 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "tile_0023.png 3"
3/texture = ExtResource( 10 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 4 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0

[sub_resource type="TileSet" id=6]
0/name = "bg_tilemap.png 0"
0/texture = ExtResource( 11 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 144, 48 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "rotate",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=8]

[sub_resource type="DynamicFont" id=9]
size = 12
extra_spacing_char = -4
font_data = ExtResource( 16 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 20 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "Title"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 20 ), ExtResource( 22 ), ExtResource( 23 ) ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 6 )

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 144, 260 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 5 )
cell_size = Vector2( 16, 16 )
collision_layer = 2
collision_mask = 17
format = 1
tile_data = PoolIntArray( 65535, 0, 0, 18, 0, 0, 131071, 0, 0, 65554, 0, 0, 196607, 0, 0, 131090, 0, 0, 262143, 0, 0, 196626, 0, 0, 327679, 0, 0, 262162, 0, 0, 393215, 0, 0, 327698, 0, 0, 458751, 0, 0, 393234, 0, 0, 524287, 0, 0, 458770, 0, 0, 589823, 0, 0, 524306, 0, 0, 655359, 0, 0, 589842, 0, 0, 720895, 0, 0, 655378, 0, 0, 786431, 0, 0, 720914, 0, 0, 851967, 0, 0, 786450, 0, 0, 917503, 0, 0, 851986, 0, 0, 983039, 0, 0, 917522, 0, 0, 1048575, 0, 0, 983058, 0, 0, 1114111, 0, 0, 1048594, 0, 0, 1179647, 0, 0, 1114112, 1, 0, 1114113, 2, 0, 1114114, 2, 0, 1114115, 2, 0, 1114116, 2, 0, 1114117, 2, 0, 1114118, 2, 0, 1114119, 2, 0, 1114120, 2, 0, 1114121, 2, 0, 1114122, 2, 0, 1114123, 2, 0, 1114124, 2, 0, 1114125, 2, 0, 1114126, 2, 0, 1114127, 2, 0, 1114128, 2, 0, 1114129, 3, 0, 1114130, 0, 0 )

[node name="BG" type="TileMap" parent="."]
z_index = -1
tile_set = SubResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -65540, 0, 0, -65539, 0, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -131061, 0, 0, -131060, 0, 0, -131059, 0, 0, -131058, 0, 0, -131057, 0, 0, -131056, 0, 0, -131055, 0, 0, -131054, 0, 0, -131053, 0, 0, -131052, 0, 0, -131051, 0, 0, -4, 0, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 393212, 0, 0, 393213, 0, 0, 393214, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 458748, 0, 0, 458749, 0, 0, 458750, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 524284, 0, 0, 524285, 0, 0, 524286, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 589820, 0, 2, 589821, 0, 2, 589822, 0, 2, 589823, 0, 2, 524288, 0, 2, 524289, 0, 2, 524290, 0, 2, 524291, 0, 2, 524292, 0, 2, 524293, 0, 2, 524294, 0, 2, 524295, 0, 2, 524296, 0, 2, 524297, 0, 2, 524298, 0, 2, 524299, 0, 2, 524300, 0, 2, 524301, 0, 2, 524302, 0, 2, 524303, 0, 2, 524304, 0, 2, 524305, 0, 2, 524306, 0, 2, 524307, 0, 2, 524308, 0, 2, 524309, 0, 2, 655356, 0, 3, 655357, 0, 3, 655358, 0, 3, 655359, 0, 3, 589824, 0, 3, 589825, 0, 3, 589826, -1073741824, 3, 589827, -1073741824, 3, 589828, -1073741824, 3, 589829, -1073741824, 3, 589830, -1073741824, 3, 589831, -1073741824, 3, 589832, -1073741824, 3, 589833, -1073741824, 3, 589834, -1073741824, 3, 589835, -1073741824, 3, 589836, -1073741824, 3, 589837, -1073741824, 3, 589838, -1073741824, 3, 589839, -1073741824, 3, 589840, -1073741824, 3, 589841, 0, 3, 589842, 0, 3, 589843, 0, 3, 589844, 0, 3, 589845, 0, 3, 720892, 0, 3, 720893, 0, 3, 720894, 0, 3, 720895, 0, 3, 655360, 0, 3, 655361, 0, 3, 655362, -1073741824, 3, 655363, -1073741824, 3, 655364, -1073741824, 3, 655365, -1073741824, 3, 655366, -1073741824, 3, 655367, -1073741824, 3, 655368, -1073741824, 3, 655369, -1073741824, 3, 655370, -1073741824, 3, 655371, -1073741824, 3, 655372, -1073741824, 3, 655373, -1073741824, 3, 655374, -1073741824, 3, 655375, -1073741824, 3, 655376, -1073741824, 3, 655377, 0, 3, 655378, 0, 3, 655379, 0, 3, 655380, 0, 3, 655381, 0, 3, 786428, 0, 3, 786429, 0, 3, 786430, 0, 3, 786431, 0, 3, 720896, 0, 3, 720897, 0, 3, 720898, -1073741824, 3, 720899, -1073741824, 3, 720900, -1073741824, 3, 720901, -1073741824, 3, 720902, -1073741824, 3, 720903, -1073741824, 3, 720904, -1073741824, 3, 720905, -1073741824, 3, 720906, -1073741824, 3, 720907, -1073741824, 3, 720908, -1073741824, 3, 720909, -1073741824, 3, 720910, -1073741824, 3, 720911, -1073741824, 3, 720912, -1073741824, 3, 720913, 0, 3, 720914, 0, 3, 720915, 0, 3, 720916, 0, 3, 720917, 0, 3, 851964, 0, 3, 851965, 0, 3, 851966, 0, 3, 851967, 0, 3, 786432, 0, 3, 786433, 0, 3, 786434, -1073741824, 3, 786435, -1073741824, 3, 786436, -1073741824, 3, 786437, -1073741824, 3, 786438, -1073741824, 3, 786439, -1073741824, 3, 786440, -1073741824, 3, 786441, -1073741824, 3, 786442, -1073741824, 3, 786443, -1073741824, 3, 786444, -1073741824, 3, 786445, -1073741824, 3, 786446, -1073741824, 3, 786447, -1073741824, 3, 786448, -1073741824, 3, 786449, 0, 3, 786450, 0, 3, 786451, 0, 3, 786452, 0, 3, 786453, 0, 3, 917500, 0, 3, 917501, 0, 3, 917502, 0, 3, 917503, 0, 3, 851968, 0, 3, 851969, 0, 3, 851970, -1073741824, 3, 851971, -1073741824, 3, 851972, -1073741824, 3, 851973, -1073741824, 3, 851974, -1073741824, 3, 851975, -1073741824, 3, 851976, -1073741824, 3, 851977, -1073741824, 3, 851978, -1073741824, 3, 851979, -1073741824, 3, 851980, -1073741824, 3, 851981, -1073741824, 3, 851982, -1073741824, 3, 851983, -1073741824, 3, 851984, -1073741824, 3, 851985, 0, 3, 851986, 0, 3, 851987, 0, 3, 851988, 0, 3, 851989, 0, 3, 983036, 0, 3, 983037, 0, 3, 983038, 0, 3, 983039, 0, 3, 917504, 0, 3, 917505, 0, 3, 917506, 0, 65538, 917507, 0, 65538, 917508, 0, 65538, 917509, 0, 65538, 917510, 0, 65538, 917511, 0, 65538, 917512, 0, 65538, 917513, 0, 65538, 917514, 0, 65538, 917515, 0, 65538, 917516, 0, 65538, 917517, 0, 65538, 917518, 0, 65538, 917519, 0, 65538, 917520, 0, 65538, 917521, 0, 3, 917522, 0, 3, 917523, 0, 3, 917524, 0, 3, 917525, 0, 3, 1048572, 0, 3, 1048573, 0, 3, 1048574, 0, 3, 1048575, 0, 3, 983040, 0, 3, 983041, 0, 3, 983042, 0, 65538, 983043, 0, 65538, 983044, 0, 65538, 983045, 0, 65538, 983046, 0, 65538, 983047, 0, 65538, 983048, 0, 65538, 983049, 0, 65538, 983050, 0, 65538, 983051, 0, 65538, 983052, 0, 65538, 983053, 0, 65538, 983054, 0, 65538, 983055, 0, 65538, 983056, 0, 65538, 983057, 0, 3, 983058, 0, 3, 983059, 0, 3, 983060, 0, 3, 983061, 0, 3, 1114108, 0, 3, 1114109, 0, 3, 1114110, 0, 3, 1114111, 0, 3, 1048576, 0, 3, 1048577, 0, 3, 1048578, 0, 65538, 1048579, 0, 65538, 1048580, 0, 65538, 1048581, 0, 65538, 1048582, 0, 65538, 1048583, 0, 65538, 1048584, 0, 65538, 1048585, 0, 65538, 1048586, 0, 65538, 1048587, 0, 65538, 1048588, 0, 65538, 1048589, 0, 65538, 1048590, 0, 65538, 1048591, 0, 65538, 1048592, 0, 65538, 1048593, 0, 3, 1048594, 0, 3, 1048595, 0, 3, 1048596, 0, 3, 1048597, 0, 3, 1179644, 0, 3, 1179645, 0, 3, 1179646, 0, 3, 1179647, 0, 3, 1114112, 0, 3, 1114113, 0, 3, 1114114, 0, 65538, 1114115, 0, 65538, 1114116, 0, 65538, 1114117, 0, 65538, 1114118, 0, 65538, 1114119, 0, 65538, 1114120, 0, 65538, 1114121, 0, 65538, 1114122, 0, 65538, 1114123, 0, 65538, 1114124, 0, 65538, 1114125, 0, 65538, 1114126, 0, 65538, 1114127, 0, 65538, 1114128, 0, 65538, 1114129, 0, 3, 1114130, 0, 3, 1114131, 0, 3, 1114132, 0, 3, 1114133, 0, 3 )

[node name="Decorations" type="Node2D" parent="."]
z_index = 1

[node name="Decoration" type="Sprite" parent="Decorations"]
position = Vector2( 48, 264 )
texture = ExtResource( 12 )

[node name="Decoration2" type="Sprite" parent="Decorations"]
position = Vector2( 200, 264 )
texture = ExtResource( 12 )
flip_h = true

[node name="Decoration3" type="Sprite" parent="Decorations"]
position = Vector2( 280, 264 )
texture = ExtResource( 12 )

[node name="Decoration4" type="Sprite" parent="Decorations"]
position = Vector2( 216, 264 )
texture = ExtResource( 13 )

[node name="Decoration5" type="Sprite" parent="Decorations"]
position = Vector2( 32, 264 )
texture = ExtResource( 13 )
flip_h = true

[node name="Decoration6" type="Sprite" parent="Decorations"]
position = Vector2( 111, 265 )
texture = ExtResource( 14 )

[node name="Decoration7" type="Sprite" parent="Decorations"]
position = Vector2( 248, 264 )
texture = ExtResource( 14 )

[node name="CoinSpawner" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Coin" type="Area2D" parent="CoinSpawner"]
position = Vector2( -120, 120 )
collision_layer = 0

[node name="Sprite" type="AnimatedSprite" parent="CoinSpawner/Coin"]
frames = SubResource( 7 )
animation = "rotate"
playing = true

[node name="Area" type="CollisionShape2D" parent="CoinSpawner/Coin"]
shape = SubResource( 8 )

[node name="Collected" type="AudioStreamPlayer" parent="CoinSpawner"]
stream = ExtResource( 19 )

[node name="UI" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="HUD" type="Control" parent="UI"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="Hearts" type="HBoxContainer" parent="UI/HUD"]
margin_left = 2.0
margin_top = 2.0
margin_right = 40.0
margin_bottom = 16.0
custom_constants/separation = 0

[node name="1" type="TextureRect" parent="UI/HUD/Hearts"]
margin_right = 18.0
margin_bottom = 18.0
texture = ExtResource( 15 )

[node name="2" type="TextureRect" parent="UI/HUD/Hearts"]
margin_left = 18.0
margin_right = 36.0
margin_bottom = 18.0
texture = ExtResource( 15 )

[node name="3" type="TextureRect" parent="UI/HUD/Hearts"]
margin_left = 36.0
margin_right = 54.0
margin_bottom = 18.0
texture = ExtResource( 15 )

[node name="Points" type="VBoxContainer" parent="UI/HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -160.0
margin_right = -8.0
margin_bottom = 24.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="UI/HUD/Points"]
margin_right = 152.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.254902, 0.282353, 0.368627, 1 )
custom_fonts/font = SubResource( 9 )
text = "0"
align = 2
valign = 1
autowrap = true

[node name="Label2" type="Label" parent="UI/HUD/Points"]
visible = false
margin_top = 22.0
margin_right = 152.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.254902, 0.282353, 0.368627, 1 )
text = "0"
align = 2
valign = 1
autowrap = true

[node name="GameOver" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" type="ColorRect" parent="UI/GameOver"]
margin_right = 288.0
margin_bottom = 288.0
color = Color( 0, 0, 0, 0.462745 )

[node name="GameOver" type="TextureRect" parent="UI/GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -104.0
margin_right = 64.0
margin_bottom = 24.0
texture = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main Menu" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 21 )

[node name="Overlay2" type="ColorRect" parent="UI/Main Menu"]
margin_right = 288.0
margin_bottom = 288.0
color = Color( 0, 0, 0, 0.462745 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="UI/Main Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -104.0
margin_right = 64.0
margin_bottom = 24.0
texture = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="UI/Main Menu"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Main Menu"]
playback_speed = 0.75
anims/RESET = SubResource( 10 )
anims/Title = SubResource( 11 )

[node name="Obstacles" type="Node2D" parent="."]

[node name="AI" type="Node" parent="."]
script = ExtResource( 24 )

[node name="AiEnvironment" type="Node2D" parent="."]
script = ExtResource( 25 )

[connection signal="tree_exiting" from="." to="AiEnvironment" method="save_data"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
[connection signal="body_entered" from="CoinSpawner/Coin" to="CoinSpawner" method="_on_Coin_body_entered"]
